--- a/Final Project Files/php/reghelp.html
+++ b/Final Project Files/php/reghelp.html
@@ -33,6 +33,19 @@ h1{
 p{
     font-size: 120%;
     font-family: courier;
+    padding:5px;
+}
+a{
+    background-color:red;
+    width:250px;
+    height:50px;
+    border-radius:100px;
+    border:none;
+    transition: background-color 0.5s ease;
+    text-decoration:none;
+}
+a:hover{
+    background-color:pink;
 }
 
 </style>
@@ -47,6 +60,7 @@ p{
         <p>Phone Number: Your phone number must be ten digits long, with no spaces or dashes or other characters with it. ENTER NUMBERS ONLY.</p>
         <p>Address, City, State, Zipcode: The state you enter should only be the two-letter code (example: Georgia = GA, New York = NY, etc.). The zipcode must be a five-digit number. There are few other restrictions on entering your address. However, BE AWARE that the address you entered will be used in correctly sending your orders, so BE CAREFUL.</p>
         <p>The error message that appears when you enter the wrong information will display only the first incorrect field. Once you have corrected all of those mistakes, you will be able to register</p>
+        <p><a href="register.php">Return to Registration</a></p>
     </div>
 </body>
 
